added logic to generate a new swagger-output.json if file does not exists on path
